--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <img src="i601453 (1).webp" alt="avatar da Nicole" srcset="">
     <p>Eu Sou A Nicole</p>
     <h1>Eu tenho alguns hobbies</h1>
-    
+ <p>Sou uma estudante do Ensino Médio.</p>    
 </body>
 </html>
