--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <img src="i601453 (1).webp" alt="avatar da Nicole" srcset="">
     <p>Eu Sou A Nicole</p>
     <h1>Eu tenho alguns hobbies</h1>
- <p>Sou uma estudante do Ensino Médio.</p>    
+
+    <p>Sou uma estudante do Ensino Médio. Não sei muita coisa de programação, mas quero aprender.</p>  
+
+    <p>MEUS INTERESSES</p>  
+    <div>
+        <p>história</p>
+        <p>livros</p>
+        <p>academia</p>
+        <p>nutrição</p>
+    </div>
+
 </body>
 </html>
