--- a/PORTIFOLIO/index (1).html
+++ b/PORTIFOLIO/index (1).html
@@ -8,8 +8,14 @@
     <title>Meu Portifólio</title>
 </head>
 <body>
-    <header class="container">
-<img src="i601453 (1).webp" alt="avatar da Nicole" srcset="">
+    <header class="container text-center">
+<img 
+src="25869566-monocromatico-mulher-avatar-silhueta-do-utilizador-icone-dentro-na-moda-plano-projeto-vetor.jpg" 
+alt="avatar da Nicole" 
+class=" rounded-circle"
+width="150"
+height="150"
+srcset="">
     <p>Eu Sou A Nicole</p>
     <h1>Eu tenho alguns hobbies</h1>
 
